[gd_scene load_steps=11 format=3 uid="uid://bdwknd7ffydpx"]

[ext_resource type="Script" uid="uid://2asp4c433osp" path="res://scenes/_shared/touch_controller/touch_screen_controller.gd" id="1_byuae"]
[ext_resource type="Texture2D" uid="uid://h31bnctfaxoc" path="res://art/_shared/touch_button_controller_normal.png" id="2_s4jse"]
[ext_resource type="Texture2D" uid="uid://dqa4culfa35cg" path="res://art/_shared/touch_button_controller_pressed.png" id="3_n382d"]
[ext_resource type="Texture2D" uid="uid://cvx3pdt7vngqd" path="res://art/_shared/touch_button_action_dir_left.png" id="4_wk8l5"]
[ext_resource type="Texture2D" uid="uid://bm4ev3l8ruhy3" path="res://art/_shared/touch_button_action_pause.png" id="4_y5di4"]
[ext_resource type="Texture2D" uid="uid://bmdaiutjf4nyf" path="res://art/_shared/touch_button_action_dir_right.png" id="5_5kyfi"]
[ext_resource type="Texture2D" uid="uid://buhbnqp5t28qo" path="res://art/_shared/touch_button_action_dir_up.png" id="6_lgyog"]
[ext_resource type="Texture2D" uid="uid://de36gidgd607d" path="res://art/_shared/touch_button_action_dir_down.png" id="7_uw13d"]
[ext_resource type="Texture2D" uid="uid://dtdldobhx6tjl" path="res://art/_shared/touch_button_action_main_accept.png" id="8_r2us6"]
[ext_resource type="Texture2D" uid="uid://ccmibsytsd4kb" path="res://art/_shared/touch_button_action_secondary_cancel.png" id="10_yne6m"]

[node name="TouchScreenController" type="Node2D"]
process_mode = 3
z_index = 4096
script = ExtResource("1_byuae")

[node name="PauseButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(184, 8)
texture_normal = ExtResource("2_s4jse")
texture_pressed = ExtResource("3_n382d")
action = "pause"
visibility_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="PauseButton"]
position = Vector2(24, 24)
texture = ExtResource("4_y5di4")

[node name="Dpad" type="Node2D" parent="."]
position = Vector2(8, 170)

[node name="LeftButton" type="TouchScreenButton" parent="Dpad"]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(0, 77)
texture_normal = ExtResource("2_s4jse")
texture_pressed = ExtResource("3_n382d")
visibility_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="Dpad/LeftButton"]
position = Vector2(24, 24)
texture = ExtResource("4_wk8l5")

[node name="RightButton" type="TouchScreenButton" parent="Dpad"]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(102, 77)
texture_normal = ExtResource("2_s4jse")
texture_pressed = ExtResource("3_n382d")
visibility_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="Dpad/RightButton"]
position = Vector2(24, 24)
texture = ExtResource("5_5kyfi")

[node name="UpButton" type="TouchScreenButton" parent="Dpad"]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(51, 27)
texture_normal = ExtResource("2_s4jse")
texture_pressed = ExtResource("3_n382d")
visibility_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="Dpad/UpButton"]
position = Vector2(24, 24)
texture = ExtResource("6_lgyog")

[node name="DownButton" type="TouchScreenButton" parent="Dpad"]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(51, 77)
texture_normal = ExtResource("2_s4jse")
texture_pressed = ExtResource("3_n382d")
visibility_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="Dpad/DownButton"]
position = Vector2(24, 24)
texture = ExtResource("7_uw13d")

[node name="MainActionButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(184, 197)
texture_normal = ExtResource("2_s4jse")
texture_pressed = ExtResource("3_n382d")
visibility_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="MainActionButton"]
position = Vector2(24, 24)
texture = ExtResource("8_r2us6")

[node name="SecondaryActionButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.25098)
position = Vector2(184, 247)
texture_normal = ExtResource("2_s4jse")
texture_pressed = ExtResource("3_n382d")
visibility_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="SecondaryActionButton"]
position = Vector2(24, 24)
texture = ExtResource("10_yne6m")
